Clean build.gradle