@@ -15,20 +15,6 @@ subprojects {
 	sourceCompatibility = 17
 	targetCompatibility = 17
 
-	tasks.withType(JavaCompile) {
-		options.compilerArgs += "--enable-preview"
-	}
-	tasks.withType(Test) {
-		jvmArgs += "--enable-preview"
-	}
-	tasks.withType(JavaExec) {
-		jvmArgs += "--enable-preview"
-	}
-
-	java {
-		modularity.inferModulePath = true
-	}
-
 	afterEvaluate {
 		repositories {
 			mavenCentral()
